# ReMon

./: .dockerignore  .gitignore  .gitmodules  BENCHMARKSREADME.txt  CMakeLists.txt  Dockerfile  FOLDERS.txt  GHUMVEELICENSE.txt  IPMONLICENSE.txt  LICENSE.txt  README.md  STATUS.md  bootstrap.sh  compile_loader.rb  compile_syncagent.rb  countLOC.sh  docker_MVEE.sh  generate_syscall_tables.rb  make-common  make.deps  makefile  makefile-amd64  makefile-arm  makefile.debug  makefile.debug-sanitize  makefile.release  makefile.release-with-syms
Benchmarks/ShmGLIBCMicroBenchmarks/: README.md  main.cpp
IP-MON/: .gitignore  MVEE_ipmon.cpp  MVEE_ipmon.h  MVEE_ipmon_inlines.h  MVEE_ipmon_memory.h  MVEE_ipmon_syscall.S  comp.sh  debug.sh  generate_headers.rb
IP-MON-atc/: .gitignore  MVEE_ipmon.cpp  MVEE_ipmon.h  comp.sh  diablo.py  generate_headers.rb
IP-MON/asm/: ipmon_checked_syscall.S  ipmon_enclave_epilogue.S  ipmon_enclave_prologue.S  ipmon_unchecked_syscall.S
Interposers/gcclibs_interposer/: comp.sh  gcclibs_interposer.c
Interposers/glib_interposer/: comp.sh  glib_interposer.cpp
Interposers/gtk_interposer/: comp.sh  gtk_interposer.cpp  gtk_interposer.h
Interposers/libc_interposer/: Versions  comp.sh  libc_interposer.c
Interposers/libreoffice_uno_interposer/: Versions  comp.sh  libreoffice_uno_interposer.c  libreoffice_uno_interposer.h
Interposers/openjdk_interposer/: comp.sh  openjdk_interposer.c
Interposers/orbit_interposer/: comp.sh  orbit_interposer.cpp  orbit_interposer.h
Interposers/pango_interposer/: comp.sh  pango_interposer.cpp  pango_interposer.h
Interposers/rand_interposer/: Versions  comp.sh  rand_interposer.c  rand_interposer.h
MVEE/: .gitignore
MVEE/Inc/: .gitignore  MVEE.h  MVEE_build_config.h  MVEE_build_pku_config.h  MVEE_config.h  MVEE_erim.h  MVEE_erim_api_inlined.h  MVEE_exceptions.h  MVEE_fake_syscall.h  MVEE_filedesc.h  MVEE_interaction.h  MVEE_interposer_base.h  MVEE_interposer_base_shared.h  MVEE_logging.h  MVEE_macros.h  MVEE_memory.h  MVEE_memory_MVEE_kernel.h  MVEE_memory_stock_kernel.h  MVEE_mman.h  MVEE_monitor.h  MVEE_pkeys.h  MVEE_shm.h  MVEE_signals.h  MVEE_syscalls.h  MVEE_syscalls_support.h  MVEE_syscalls_support_templates.h
MVEE/Src/: MVEE.cpp  MVEE_config.cpp  MVEE_demos.cpp  MVEE_filedesc.cpp  MVEE_logging.cpp  MVEE_logging_strings.cpp  MVEE_memory.cpp  MVEE_mman.cpp  MVEE_mman_debugging.cpp  MVEE_monitor.cpp  MVEE_shm.cpp  MVEE_signals.cpp  MVEE_syscalls.cpp  MVEE_syscalls_handlers.cpp  MVEE_syscalls_support.cpp  MVEE_variant_launch.cpp
MVEE_LD_Loader/: .gitignore  CMakeLists.txt  MVEE_LD_Loader.c  comp_amd64.sh  comp_arm.sh  comp_i386.sh  getunistd.rb  linkerscript_amd64.txt  linkerscript_arm.txt  linkerscript_i386.txt
MVEE_LD_Loader/amd64/: MVEE_LD_Loader.h
MVEE_LD_Loader/arm/: MVEE_LD_Loader.h
MVEE_LD_Loader/i386/: MVEE_LD_Loader.h
Tests/ShmFence/: ShmFence.cpp
Tests/ShmUnitTests/: CMakeLists.txt
Tests/ShmUnitTests/inc/: buffers.h  instruction_testing.h  instruction_tests.h  stats.h
Tests/ShmUnitTests/scripts/: create_shared_mem_file.py
Tests/ShmUnitTests/src/: buffers.cpp  instruction_testing.cpp  instruction_tests.cpp  main.cpp  stats.cpp
Utilities/: CMakeLists.txt
Utilities/LinuxDetours/: LinuxDetours.c  LinuxDetours.h  comp.sh  hde32.c  testprog.c
Utilities/MVEE_backtrace/: CMakeLists.txt  MVEE_backtrace  MVEE_backtrace.c
Utilities/SyncTrace/: CMakeLists.txt  SyncTrace.cpp
Utilities/minimal_debugger/: comp.sh  minimal_debugger.cpp
Utilities/mvee_lazy_hooker/: LinuxDetours.c  comp.sh  (+7 more)
build_scripts/: common.rb  compile_loader.rb  compile_syncagent.rb  generate_shm_table.py  generate_syscall_tables.rb  getmakearch.rb
dyninst_shm/: CMakeLists.txt  README.md  bartTestInstrumenter.cpp  dyninst-internals.cpp  dyninst-internals.h
eurosys-use-case/: nginx_atomics.patch
eurosys2022-artifact/: Dockerfile  INSTRUCTIONS.md  README.md  bootstrap.sh  docker_control.sh
ext/: MPLAYER_1.4README.txt  NGINX_1.18.0README.txt  PARSEC_2.1README.txt  PARSEC_3.0README.txt  README.txt  SPECREADME.txt  SPLASH2xREADME.txt
libclevrbuf/: Makefile  api.cpp  api.h  librbuf.h  test.cpp
libsync/: CMakeLists.txt  comp_amd64.sh  comp_arm.sh  comp_i386.sh  libsync.cpp
patches/: glib-atomic.patch  glib2.0-2.28.6-with-debuglogging.patch  glib2.0-2.28.6.patch  glib2.0-2.64.2.patch  glibc-2.19-ipmon.patch  glibc-2.19-official-amd64-interpreter.patch  glibc-2.19-official-amd64-secure-woc.patch  glibc-2.19-official-amd64-totalpartial.patch  glibc-2.19-official-amd64-woc.patch  glibc-2.19-pie-doubleinitializer-fix.patch  glibc-2.21-official-amd64-partialorder.patch  glibc-2.21-official-amd64-woc.patch  glibc-2.31.patch  include_c++_4.8.4.patch  jsoncpp.patch  libgomp-10.0.0.patch  libgomp-4.7.3.patch  libgomp-4.8.2.patch  libgomp-7.3.0.patch  libstdc++-10.0.0.patch  libstdc++-4.7.3.patch  libstdc++-4.8.2.patch  libstdc++-7.3.0.patch  linux-3.13-full-ipmon.patch  linux-3.13-ipmon.patch  linux-3.19-rc1-ptrace.patch  linux-4.4.0-full-ipmon.patch  linux-5.10-full-ipmon-pku-assisted.patch  linux-5.3.0-full-ipmon-pku-assisted.patch  linux-5.3.0-full-ipmon.patch  linux-5.4.0-full-ipmon-pku-assisted.patch  linux-5.4.0-full-ipmon-with-pku.patch  linux-5.4.0-full-ipmon-with-pkuV2.patch  linux-5.4.0-full-ipmon.patch  linux-kernel-2.6.38-with-ext_mprotect.patch  linux-kernel-2.6.38.patch  linux-kernel-3.5.0.patch  linux-kernel-3.8.patch  mplayer-1.4-osd.patch  nginx-1.18.0-shm.patch  (+17 more)
scripts/: beautify_source.sh  disable_core1.rb  enable_core1.rb  find_atomics.rb  find_noninstrumented_atomics.rb  generate_atomic_header.sh  generate_atomic_header_new.sh  generate_shm_lines.sh  kill_shm.sh  measure_syscall_density.rb  mvee_atomic.h  parseatomic.cpp  parsecmgmt-native2  scan_program.rb  stijn-build-libc-fast.sh  stijn-build-openjdk.sh  stijn-clean-openjdk.sh  stijn-configure-gcc.sh  stijn-configure-libc-debug.sh  stijn-configure-libc.sh  switch_patched_binaries.sh  uncrustify.cfg
spec_configs/: spec2006_MVEE_pie_amd64.cfg  spec2006_MVEE_pie_i386.cfg  spec2006_MVEE_thereisnopie_amd64.cfg  spec2006_MVEE_thereisnopie_i386.cfg
(+136 files in other folders)
